# mlops-workshop

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  data.dvc  dvc.yaml  models.dvc  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.dvc/: config
.github/workflows/: ci.yml  tf.yml
data/: cleaned.csv.dvc
exercises/1/: README.md
exercises/2/: README.md
mlops_api/: app.py  config.py  model.py  routes.py  train.py
mlops_api/templates/: home.html  layout.html
model/: streamlit_app.py
models/: train.py
notebooks/: data_processing.ipynb  eda.ipynb
src/: app.py  data_prep.py  routes.py  streamlit_app.py  train.py
terraform/: terragrunt.hcl
terraform/app/: Dockerrun.aws.json  Dockerrun.aws.template.json  beanstalk.tf  iam.tf  network.tf  outputs.tf  terragrunt.hcl  vars.tf
terraform/bootstrap/: ecr.tf  iam.tf  outputs.tf  user.tf
tests/: conftest.py  test_app.py  test_model.py
tests/smoke/: test_smoke.py
tests/unit/: test_app.py  test_model.py
training/: train.py
