[tool.poetry]
name = "mlops-intro"
version = "0.1.0"
description = ""
authors = ["Ross Parkin <ross.parkin@armakuni.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
jupyter = "^1.0.0"
pandas = "^1.3"
openpyxl = "^3.0.10"
sklearn = "^0.0"
mlwrap = {git = "ssh://git@github.com/RToTheP/mlwrap.git", rev = "main"}
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
